--- a/Post To 10C/Base.lproj/ShareViewController.xib
+++ b/Post To 10C/Base.lproj/ShareViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ShareViewController">
             <connections>
+                <outlet property="remainingCharactersLabel" destination="qgj-aV-rIw" id="sr7-jd-ksQ"/>
                 <outlet property="textView" destination="zGN-CO-03a" id="c8G-rm-Vp4"/>
                 <outlet property="view" destination="1" id="2"/>
             </connections>
@@ -87,10 +88,20 @@ Gw
                         <animations/>
                     </scroller>
                 </scrollView>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qgj-aV-rIw">
+                    <rect key="frame" x="18" y="12" width="57" height="17"/>
+                    <animations/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="0 / 2048" id="Ul4-N9-hJM">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
             </subviews>
             <constraints>
                 <constraint firstItem="1uM-r7-H1c" firstAttribute="leading" secondItem="NVE-vN-dkz" secondAttribute="trailing" constant="8" id="1UO-J1-LbJ"/>
                 <constraint firstAttribute="bottom" secondItem="1uM-r7-H1c" secondAttribute="bottom" constant="10" id="4wH-De-nMF"/>
+                <constraint firstItem="qgj-aV-rIw" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="6WE-fx-CxN"/>
                 <constraint firstItem="NVE-vN-dkz" firstAttribute="top" secondItem="1oB-dD-wdd" secondAttribute="bottom" constant="8" id="G6Y-WK-J2m"/>
                 <constraint firstItem="1oB-dD-wdd" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="Szk-pm-bF1"/>
                 <constraint firstAttribute="bottom" secondItem="NVE-vN-dkz" secondAttribute="bottom" constant="10" id="USG-Gg-of3"/>
@@ -99,6 +110,7 @@ Gw
                 <constraint firstItem="1oB-dD-wdd" firstAttribute="top" secondItem="aNc-0i-CWK" secondAttribute="bottom" constant="8" id="ntf-3S-dGB"/>
                 <constraint firstItem="NVE-vN-dkz" firstAttribute="width" secondItem="1uM-r7-H1c" secondAttribute="width" id="qPo-ky-Fcw"/>
                 <constraint firstAttribute="trailing" secondItem="1uM-r7-H1c" secondAttribute="trailing" constant="10" id="qfT-cw-QQ2"/>
+                <constraint firstItem="qgj-aV-rIw" firstAttribute="centerY" secondItem="NVE-vN-dkz" secondAttribute="centerY" id="sk1-nZ-eqA"/>
                 <constraint firstAttribute="centerX" secondItem="aNc-0i-CWK" secondAttribute="centerX" id="uV3-Wn-RA3"/>
                 <constraint firstItem="aNc-0i-CWK" firstAttribute="top" secondItem="1" secondAttribute="top" constant="15" id="vpR-tf-ebx"/>
             </constraints>
