--- a/Post To 10C/Base.lproj/ShareViewController.xib
+++ b/Post To 10C/Base.lproj/ShareViewController.xib
@@ -16,7 +16,7 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView translatesAutoresizingMaskIntoConstraints="NO" id="1">
-            <rect key="frame" x="0.0" y="0.0" width="387" height="202"/>
+            <rect key="frame" x="0.0" y="0.0" width="387" height="261"/>
             <subviews>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1uM-r7-H1c">
                     <rect key="frame" x="301" y="3" width="82" height="32"/>
@@ -48,7 +48,7 @@ Gw
                     </connections>
                 </button>
                 <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aNc-0i-CWK">
-                    <rect key="frame" x="152" y="170" width="82" height="17"/>
+                    <rect key="frame" x="152" y="229" width="82" height="17"/>
                     <animations/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Post to 10C" id="0xp-rC-2gr">
                         <font key="font" metaFont="systemBold"/>
@@ -57,20 +57,20 @@ Gw
                     </textFieldCell>
                 </textField>
                 <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1oB-dD-wdd">
-                    <rect key="frame" x="20" y="39" width="347" height="123"/>
+                    <rect key="frame" x="20" y="39" width="347" height="182"/>
                     <clipView key="contentView" id="QnZ-RB-wih">
-                        <rect key="frame" x="1" y="1" width="345" height="121"/>
+                        <rect key="frame" x="1" y="1" width="345" height="180"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="zGN-CO-03a">
-                                <rect key="frame" x="0.0" y="0.0" width="345" height="121"/>
+                                <rect key="frame" x="0.0" y="0.0" width="345" height="180"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <size key="minSize" width="345" height="121"/>
+                                <size key="minSize" width="345" height="180"/>
                                 <size key="maxSize" width="463" height="10000000"/>
                                 <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                <size key="minSize" width="345" height="121"/>
+                                <size key="minSize" width="345" height="180"/>
                                 <size key="maxSize" width="463" height="10000000"/>
                             </textView>
                         </subviews>
@@ -84,7 +84,7 @@ Gw
                         <animations/>
                     </scroller>
                     <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="JfD-wB-GGt">
-                        <rect key="frame" x="330" y="1" width="16" height="121"/>
+                        <rect key="frame" x="330" y="1" width="16" height="180"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
                     </scroller>
@@ -116,6 +116,7 @@ Gw
                 <constraint firstItem="aNc-0i-CWK" firstAttribute="top" secondItem="1" secondAttribute="top" constant="15" id="vpR-tf-ebx"/>
             </constraints>
             <animations/>
+            <point key="canvasLocation" x="564.5" y="487.5"/>
         </customView>
     </objects>
 </document>
