--- a/Share To 10C/Base.lproj/Main.storyboard
+++ b/Share To 10C/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="6198" systemVersion="14A297b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="8173.3" systemVersion="15A279b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6198"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8173.3"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -641,20 +642,21 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider=""/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="75" y="0.0"/>
         </scene>
-        <!--Window Controller - Window-->
+        <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
             <objects>
                 <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
                     <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
+                        <rect key="contentRect" x="196" y="240" width="290" height="140"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+                        <value key="minSize" type="size" width="290" height="140"/>
                     </window>
                     <connections>
                         <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
@@ -667,15 +669,139 @@
         <!--View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="XfG-lQ-9wD" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="290" height="140"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1H7-tK-nGg">
+                                <rect key="frame" x="18" y="105" width="47" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="43" id="lxN-KW-Cfj"/>
+                                </constraints>
+                                <animations/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Status:" id="ftQ-Et-GDR">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="akd-Od-kXh">
+                                <rect key="frame" x="94" y="75" width="176" height="22"/>
+                                <animations/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="8fN-T2-K37">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="SBY-nX-2Mb">
+                                <rect key="frame" x="18" y="51" width="66" height="17"/>
+                                <animations/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Password:" id="RYD-qx-3Zx">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Qjl-LF-SlF">
+                                <rect key="frame" x="88" y="12" width="96" height="32"/>
+                                <animations/>
+                                <buttonCell key="cell" type="push" title="Logout" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="TcX-IU-v0z">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="logout:" target="XfG-lQ-9wD" id="VaM-Yw-BHD"/>
+                                </connections>
+                            </button>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="h3a-kX-GRN">
+                                <rect key="frame" x="18" y="78" width="70" height="17"/>
+                                <animations/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Username:" id="XvJ-Oo-Oml">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <secureTextField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0Ka-bJ-2gh">
+                                <rect key="frame" x="94" y="48" width="176" height="22"/>
+                                <animations/>
+                                <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" usesSingleLineMode="YES" id="MLy-el-DzC">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                    <allowedInputSourceLocales>
+                                        <string>NSAllRomanInputSourcesLocaleIdentifier</string>
+                                    </allowedInputSourceLocales>
+                                </secureTextFieldCell>
+                            </secureTextField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Qwm-Ie-Fue">
+                                <rect key="frame" x="92" y="105" width="180" height="17"/>
+                                <animations/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="lcg-qF-9U5">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="mbn-wr-xJL">
+                                <rect key="frame" x="180" y="12" width="96" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="7Ua-Wh-wfQ"/>
+                                </constraints>
+                                <animations/>
+                                <buttonCell key="cell" type="push" title="Login" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="X7y-2Z-PTH">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                    <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
+                                    <modifierMask key="keyEquivalentModifierMask" command="YES"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="login:" target="XfG-lQ-9wD" id="FJR-L5-m9N"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="1H7-tK-nGg" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="0Uj-ra-Pqx"/>
+                            <constraint firstItem="1H7-tK-nGg" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="18" id="1fT-Jb-LRT"/>
+                            <constraint firstItem="0Ka-bJ-2gh" firstAttribute="top" secondItem="akd-Od-kXh" secondAttribute="bottom" constant="5" id="Dcf-Yq-ztf"/>
+                            <constraint firstItem="0Ka-bJ-2gh" firstAttribute="width" secondItem="akd-Od-kXh" secondAttribute="width" id="IGw-2l-B4e"/>
+                            <constraint firstItem="akd-Od-kXh" firstAttribute="centerX" secondItem="Qwm-Ie-Fue" secondAttribute="centerX" id="IRP-h8-bnl"/>
+                            <constraint firstItem="SBY-nX-2Mb" firstAttribute="centerY" secondItem="0Ka-bJ-2gh" secondAttribute="centerY" id="JAu-YT-xtI"/>
+                            <constraint firstItem="akd-Od-kXh" firstAttribute="leading" secondItem="h3a-kX-GRN" secondAttribute="trailing" constant="8" id="JwZ-Vx-1jt"/>
+                            <constraint firstItem="h3a-kX-GRN" firstAttribute="centerY" secondItem="akd-Od-kXh" secondAttribute="centerY" id="KAJ-UN-Tzs"/>
+                            <constraint firstItem="0Ka-bJ-2gh" firstAttribute="leading" secondItem="SBY-nX-2Mb" secondAttribute="trailing" constant="12" id="LJl-cK-rye"/>
+                            <constraint firstItem="Qwm-Ie-Fue" firstAttribute="centerY" secondItem="1H7-tK-nGg" secondAttribute="centerY" id="Lmn-qd-Xu6"/>
+                            <constraint firstItem="h3a-kX-GRN" firstAttribute="leading" secondItem="1H7-tK-nGg" secondAttribute="leading" id="SYt-1F-slE"/>
+                            <constraint firstItem="Qjl-LF-SlF" firstAttribute="width" secondItem="mbn-wr-xJL" secondAttribute="width" id="SaH-F1-3Ke"/>
+                            <constraint firstItem="SBY-nX-2Mb" firstAttribute="leading" secondItem="h3a-kX-GRN" secondAttribute="leading" id="TL6-Jf-jbJ"/>
+                            <constraint firstAttribute="trailing" secondItem="Qwm-Ie-Fue" secondAttribute="trailing" constant="20" id="Wrw-oc-U10"/>
+                            <constraint firstItem="Qjl-LF-SlF" firstAttribute="leading" secondItem="0Ka-bJ-2gh" secondAttribute="leading" id="XOi-m5-a8i"/>
+                            <constraint firstItem="0Ka-bJ-2gh" firstAttribute="centerX" secondItem="akd-Od-kXh" secondAttribute="centerX" id="YiN-32-GWA"/>
+                            <constraint firstItem="Qwm-Ie-Fue" firstAttribute="leading" secondItem="1H7-tK-nGg" secondAttribute="trailing" constant="31" id="cQj-lv-TAf"/>
+                            <constraint firstItem="mbn-wr-xJL" firstAttribute="trailing" secondItem="0Ka-bJ-2gh" secondAttribute="trailing" id="clB-CZ-rc5"/>
+                            <constraint firstItem="akd-Od-kXh" firstAttribute="width" secondItem="Qwm-Ie-Fue" secondAttribute="width" id="gtu-d3-DUL"/>
+                            <constraint firstItem="mbn-wr-xJL" firstAttribute="leading" secondItem="Qjl-LF-SlF" secondAttribute="trailing" priority="999" constant="8" id="hPa-mZ-uhf"/>
+                            <constraint firstItem="akd-Od-kXh" firstAttribute="top" secondItem="Qwm-Ie-Fue" secondAttribute="bottom" constant="8" id="hcD-WF-0GQ"/>
+                            <constraint firstItem="mbn-wr-xJL" firstAttribute="centerY" secondItem="Qjl-LF-SlF" secondAttribute="centerY" id="liO-c6-ryH"/>
+                            <constraint firstItem="Qjl-LF-SlF" firstAttribute="top" secondItem="0Ka-bJ-2gh" secondAttribute="bottom" constant="8" id="zQX-GE-nOL"/>
+                        </constraints>
+                        <animations/>
                     </view>
+                    <connections>
+                        <outlet property="loginButton" destination="mbn-wr-xJL" id="Jvp-XO-X8f"/>
+                        <outlet property="logoutButton" destination="Qjl-LF-SlF" id="M3W-6f-iap"/>
+                        <outlet property="passwordTextField" destination="0Ka-bJ-2gh" id="nUo-xP-BAn"/>
+                        <outlet property="statusLabel" destination="Qwm-Ie-Fue" id="mWg-v8-bVX"/>
+                        <outlet property="usernameTextField" destination="akd-Od-kXh" id="xhH-DA-mID"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="-20" y="590.5"/>
         </scene>
     </scenes>
 </document>
