--- a/Post To 10C/Base.lproj/ShareViewController.xib
+++ b/Post To 10C/Base.lproj/ShareViewController.xib
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9046" systemVersion="15A282b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9046" systemVersion="15B17c" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9046"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ShareViewController">
             <connections>
                 <outlet property="authorizedLabel" destination="Yin-kI-nXt" id="U6w-53-V5z"/>
+                <outlet property="fileUploadSpinner" destination="ayi-lo-IwP" id="36F-i9-WMl"/>
                 <outlet property="postButton" destination="1uM-r7-H1c" id="Rxy-9V-Vc2"/>
                 <outlet property="postTitleTextField" destination="Ffv-jZ-Xjg" id="GvR-69-SHv"/>
                 <outlet property="remainingCharactersLabel" destination="qgj-aV-rIw" id="sr7-jd-ksQ"/>
@@ -158,9 +158,14 @@ Gw
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <progressIndicator wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" displayedWhenStopped="NO" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="ayi-lo-IwP">
+                    <rect key="frame" x="609" y="440" width="16" height="16"/>
+                    <animations/>
+                </progressIndicator>
             </subviews>
             <constraints>
                 <constraint firstItem="1uM-r7-H1c" firstAttribute="leading" secondItem="NVE-vN-dkz" secondAttribute="trailing" constant="8" id="1UO-J1-LbJ"/>
+                <constraint firstItem="ayi-lo-IwP" firstAttribute="top" secondItem="1" secondAttribute="top" constant="15" id="1vw-Zf-m5F"/>
                 <constraint firstItem="aNc-0i-CWK" firstAttribute="leading" secondItem="Yin-kI-nXt" secondAttribute="trailing" constant="8" id="2Kd-HK-TUh"/>
                 <constraint firstItem="Yin-kI-nXt" firstAttribute="centerY" secondItem="aNc-0i-CWK" secondAttribute="centerY" id="2wA-Le-BtQ"/>
                 <constraint firstAttribute="bottom" secondItem="1uM-r7-H1c" secondAttribute="bottom" constant="10" id="4wH-De-nMF"/>
@@ -190,6 +195,7 @@ Gw
                 <constraint firstAttribute="trailing" secondItem="1uM-r7-H1c" secondAttribute="trailing" constant="10" id="qfT-cw-QQ2"/>
                 <constraint firstItem="qgj-aV-rIw" firstAttribute="centerY" secondItem="NVE-vN-dkz" secondAttribute="centerY" id="sk1-nZ-eqA"/>
                 <constraint firstAttribute="centerX" secondItem="aNc-0i-CWK" secondAttribute="centerX" id="uV3-Wn-RA3"/>
+                <constraint firstAttribute="trailing" secondItem="ayi-lo-IwP" secondAttribute="trailing" constant="10" id="vLL-Cj-ZHW"/>
                 <constraint firstItem="aNc-0i-CWK" firstAttribute="top" secondItem="1" secondAttribute="top" constant="15" id="vpR-tf-ebx"/>
             </constraints>
             <animations/>
