--- a/Post To 10C/Base.lproj/ShareViewController.xib
+++ b/Post To 10C/Base.lproj/ShareViewController.xib
@@ -11,7 +11,7 @@
                 <outlet property="postButton" destination="1uM-r7-H1c" id="Rxy-9V-Vc2"/>
                 <outlet property="postTitleTextField" destination="Ffv-jZ-Xjg" id="GvR-69-SHv"/>
                 <outlet property="remainingCharactersLabel" destination="qgj-aV-rIw" id="sr7-jd-ksQ"/>
-                <outlet property="tagsTextField" destination="dBe-ae-Miy" id="7Pc-uq-aFe"/>
+                <outlet property="tagsTokenField" destination="PHk-XX-GVp" id="huw-sS-vnQ"/>
                 <outlet property="textView" destination="zGN-CO-03a" id="c8G-rm-Vp4"/>
                 <outlet property="view" destination="1" id="2"/>
             </connections>
@@ -135,17 +135,17 @@ Gw
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dBe-ae-Miy">
-                    <rect key="frame" x="50" y="34" width="577" height="22"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="comma, seperated, tags" drawsBackground="YES" id="CHJ-ZE-wsY">
-                        <font key="font" metaFont="system"/>
-                        <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
                 <progressIndicator wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" displayedWhenStopped="NO" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="ayi-lo-IwP">
                     <rect key="frame" x="609" y="440" width="16" height="16"/>
                 </progressIndicator>
+                <tokenField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="PHk-XX-GVp">
+                    <rect key="frame" x="50" y="34" width="577" height="22"/>
+                    <tokenFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" alignment="left" placeholderString="" drawsBackground="YES" allowsEditingTextAttributes="YES" id="6TL-If-C2b">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </tokenFieldCell>
+                </tokenField>
             </subviews>
             <constraints>
                 <constraint firstItem="1uM-r7-H1c" firstAttribute="leading" secondItem="NVE-vN-dkz" secondAttribute="trailing" constant="8" id="1UO-J1-LbJ"/>
@@ -154,26 +154,26 @@ Gw
                 <constraint firstItem="Yin-kI-nXt" firstAttribute="centerY" secondItem="aNc-0i-CWK" secondAttribute="centerY" id="2wA-Le-BtQ"/>
                 <constraint firstAttribute="bottom" secondItem="1uM-r7-H1c" secondAttribute="bottom" constant="10" id="4wH-De-nMF"/>
                 <constraint firstItem="r8J-4p-F0X" firstAttribute="width" secondItem="Ffv-jZ-Xjg" secondAttribute="width" id="5XQ-xd-c3K"/>
-                <constraint firstItem="dBe-ae-Miy" firstAttribute="centerY" secondItem="yqS-Eu-htP" secondAttribute="centerY" id="5cN-Ec-bLe"/>
                 <constraint firstItem="yqS-Eu-htP" firstAttribute="leading" secondItem="zGN-CO-03a" secondAttribute="leading" id="5dh-dp-JVE"/>
                 <constraint firstItem="qgj-aV-rIw" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="8" id="6WE-fx-CxN"/>
                 <constraint firstItem="Ffv-jZ-Xjg" firstAttribute="top" secondItem="r8J-4p-F0X" secondAttribute="bottom" constant="8" id="6y2-jJ-d9u"/>
                 <constraint firstItem="V5O-KU-IuE" firstAttribute="centerX" secondItem="zGN-CO-03a" secondAttribute="centerX" id="7wf-E1-WTF"/>
-                <constraint firstAttribute="trailing" secondItem="dBe-ae-Miy" secondAttribute="trailing" constant="8" id="Ik0-ti-29I"/>
-                <constraint firstItem="dBe-ae-Miy" firstAttribute="top" secondItem="zGN-CO-03a" secondAttribute="bottom" constant="9" id="JxQ-Ce-6zc"/>
+                <constraint firstItem="PHk-XX-GVp" firstAttribute="leading" secondItem="yqS-Eu-htP" secondAttribute="trailing" constant="8" id="Jeg-Pf-txx"/>
                 <constraint firstItem="r8J-4p-F0X" firstAttribute="top" secondItem="aNc-0i-CWK" secondAttribute="bottom" constant="7" id="KOa-aw-jl9"/>
                 <constraint firstItem="V5O-KU-IuE" firstAttribute="width" secondItem="zGN-CO-03a" secondAttribute="width" id="Mhm-NL-iqC"/>
+                <constraint firstItem="PHk-XX-GVp" firstAttribute="centerY" secondItem="yqS-Eu-htP" secondAttribute="centerY" id="Okq-R3-DXs"/>
                 <constraint firstItem="Ffv-jZ-Xjg" firstAttribute="centerX" secondItem="zGN-CO-03a" secondAttribute="centerX" id="RXH-5b-mgZ"/>
                 <constraint firstItem="1oB-dD-wdd" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="8" id="Szk-pm-bF1"/>
                 <constraint firstItem="r8J-4p-F0X" firstAttribute="centerX" secondItem="Ffv-jZ-Xjg" secondAttribute="centerX" id="TQk-6X-Q7A"/>
                 <constraint firstAttribute="bottom" secondItem="NVE-vN-dkz" secondAttribute="bottom" constant="10" id="USG-Gg-of3"/>
                 <constraint firstItem="Yin-kI-nXt" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="VGI-xL-1uB"/>
+                <constraint firstAttribute="trailing" secondItem="PHk-XX-GVp" secondAttribute="trailing" constant="8" id="WP7-hG-vhX"/>
                 <constraint firstAttribute="trailing" secondItem="1oB-dD-wdd" secondAttribute="trailing" constant="8" id="Yfa-hH-seZ"/>
                 <constraint firstItem="1uM-r7-H1c" firstAttribute="leading" secondItem="NVE-vN-dkz" secondAttribute="trailing" constant="8" id="a8N-vS-Ew9"/>
-                <constraint firstItem="dBe-ae-Miy" firstAttribute="leading" secondItem="yqS-Eu-htP" secondAttribute="trailing" constant="8" id="aDh-at-z91"/>
                 <constraint firstItem="V5O-KU-IuE" firstAttribute="top" secondItem="Ffv-jZ-Xjg" secondAttribute="bottom" constant="6" id="bFn-Kb-zQE"/>
                 <constraint firstItem="zGN-CO-03a" firstAttribute="top" secondItem="V5O-KU-IuE" secondAttribute="bottom" constant="9" id="fX3-1o-jhL"/>
-                <constraint firstItem="qgj-aV-rIw" firstAttribute="top" secondItem="dBe-ae-Miy" secondAttribute="bottom" constant="5" id="lSK-wx-YSz"/>
+                <constraint firstItem="PHk-XX-GVp" firstAttribute="top" secondItem="zGN-CO-03a" secondAttribute="bottom" constant="9" id="ior-63-nBh"/>
+                <constraint firstItem="qgj-aV-rIw" firstAttribute="top" secondItem="PHk-XX-GVp" secondAttribute="bottom" constant="5" id="oxa-Gb-xmQ"/>
                 <constraint firstItem="Ffv-jZ-Xjg" firstAttribute="width" secondItem="zGN-CO-03a" secondAttribute="width" id="prD-Ml-ZO1"/>
                 <constraint firstItem="NVE-vN-dkz" firstAttribute="width" secondItem="1uM-r7-H1c" secondAttribute="width" id="qPo-ky-Fcw"/>
                 <constraint firstAttribute="trailing" secondItem="1uM-r7-H1c" secondAttribute="trailing" constant="10" id="qfT-cw-QQ2"/>
